[gd_scene load_steps=16 format=3 uid="uid://d0bhdhaidg4a3"]

[ext_resource type="Script" path="res://Characters/player_old_man.gd" id="1_ny465"]
[ext_resource type="PackedScene" uid="uid://dajxjr4vqav7d" path="res://Effects/ghost_dash.tscn" id="2_yo3ci"]
[ext_resource type="Shader" path="res://Characters/blur_expansion.gdshader" id="3_kbucr"]
[ext_resource type="Texture2D" uid="uid://cbod1wqldmxih" path="res://Art/Characters/old_man_player.png" id="3_phase"]
[ext_resource type="PackedScene" uid="uid://bmxxaorypbfqr" path="res://Guns/pistol.tscn" id="4_h5t58"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_23qf6"]
shader = ExtResource("3_kbucr")
shader_parameter/radius = 1.0
shader_parameter/blur_size = 1.2
shader_parameter/color = Color(0, 0, 0, 0.8)
shader_parameter/enable_blur = true
shader_parameter/samples = 32

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n2ld1"]
size = Vector2(8, 3.3)

[sub_resource type="Animation" id="Animation_mioyl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_jnt3v"]
resource_name = "dash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.7, 1.3), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02, 0.04),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-5, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_uggkl"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.02, 0.98), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_724ec"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.125, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1.5), Vector2(0, 0), Vector2(0, -1.5), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0349066, 0.0349066, -0.0349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a35jr"]
_data = {
"RESET": SubResource("Animation_mioyl"),
"dash": SubResource("Animation_jnt3v"),
"idle": SubResource("Animation_uggkl"),
"walk": SubResource("Animation_724ec")
}

[sub_resource type="Gradient" id="Gradient_duetb"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1kj5v"]
gradient = SubResource("Gradient_duetb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cbv2c"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 38.077
initial_velocity_min = 20.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_1kj5v")

[node name="PlayerOldMan" type="CharacterBody2D" groups=["players"]]
z_index = 1
z_as_relative = false
scale = Vector2(2, 2)
script = ExtResource("1_ny465")
ghost_node = ExtResource("2_yo3ci")
bullet_speed = 10.0

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_23qf6")
position = Vector2(0, -0.5)
texture = ExtResource("3_phase")
centered = false
offset = Vector2(-8, -23.5)
hframes = 4
frame = 1
region_rect = Rect2(-0.0482864, -0.0240459, 15.3697, 15.8603)
region_filter_clip_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.349999)
shape = SubResource("RectangleShape2D_n2ld1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a35jr")
}

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.04

[node name="DashParticles" type="GPUParticles2D" parent="."]
z_as_relative = false
emitting = false
amount = 90
process_material = SubResource("ParticleProcessMaterial_cbv2c")

[node name="Pistol" parent="." instance=ExtResource("4_h5t58")]
z_as_relative = true
position = Vector2(4, -4.5)

[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
